...
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintVertical_bias="0.05"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/survey_topics"
              android:id="@+id/family"
              >
              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:id="@+id/family_name"
                  android:hint="Name of the family"
                  android:layout_height="match_parent"/>
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/people"
              app:layout_constraintVertical_bias="0.05"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/family"
              >
              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:id="@+id/num_of_people"
                  android:hint="Number of people"
                  android:inputType="number"
                  android:layout_height="match_parent"/>
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/people_reached_sec"
              app:layout_constraintVertical_bias="0.05"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/people"
              >
              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:id="@+id/num_of_people_reached_sec"
                  android:hint="Number of people reached secondary school"
                  android:inputType="number"
                  android:layout_height="match_parent"/>
          </com.google.android.material.textfield.TextInputLayout>

          <Button
              android:id="@+id/btn_save_family_details"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F14FDB"
              android:text="save data"
              android:backgroundTint="@color/white"
              android:textAllCaps="false"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/people_reached_sec"
...
